--- a/scss/Base/_base.scss
+++ b/scss/Base/_base.scss
@@ -50,7 +50,6 @@ section {
     align-items: center;
     display: flex;
     flex-direction: column;
-    justify-content: center;
 }
 
 .section {
